--- a/src/Shared/FeiraTech.Exceptions/ResourceMessagesExceptions.resx
+++ b/src/Shared/FeiraTech.Exceptions/ResourceMessagesExceptions.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CPF_INVALID" xml:space="preserve">
+    <value>CPF inválido.</value>
+  </data>
   <data name="EMAIL_EMPTY" xml:space="preserve">
     <value>O e-mail é obrigatório</value>
   </data>
